--- a/camel-alura/pom.xml
+++ b/camel-alura/pom.xml
@@ -86,16 +86,15 @@
 	</dependency>
   
 	<dependency>
-		<groupId>org.apache.camel</groupId>
-		<artifactId>camel-sql</artifactId>
-		<version>${camel-version}</version>
+    <groupId>org.apache.camel</groupId>
+    <artifactId>camel-jdbc</artifactId>
+    <version>${camel-version}</version>
 	</dependency>
 	
-	
 	<dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.36</version>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.43</version>
 	</dependency>
 
   </dependencies>
