--- a/camel-alura/pom.xml
+++ b/camel-alura/pom.xml
@@ -96,6 +96,12 @@
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>5.1.43</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.apache.camel</groupId>
+	    <artifactId>camel-velocity</artifactId>
+	    <version>2.16.1</version>
+	</dependency>
 
   </dependencies>
   
